--- a/.gitmodules
+++ b/.gitmodules
@@ -81,7 +81,7 @@
 	url = git://github.com/terryma/vim-multiple-cursors.git
 [submodule "bundle/vim-airline"]
 	path = bundle/vim-airline
-	url = git@github.com:bling/vim-airline.git
+	url = git://github.com/bling/vim-airline.git
 [submodule "bundle/delimitMate"]
 	path = bundle/delimitMate
 	url = git://github.com/Raimondi/delimitMate.git
