--- a/.gitmodules
+++ b/.gitmodules
@@ -90,4 +90,4 @@
 	url = git://github.com/mileszs/ack.vim.git
 [submodule "bundle/vim-snipmate"]
 	path = bundle/vim-snipmate
-	url = git@github.com:garbas/vim-snipmate.git
+	url = git//github.com/garbas/vim-snipmate.git
